[gd_scene format=3 uid="uid://secb1eoygm27"]

[ext_resource type="Script" uid="uid://fwv541qers6c" path="res://addons/sprouty_dialogs/editor/modules/settings/components/scripts/locales_selector.gd" id="1_ic1ok"]
[ext_resource type="StyleBox" uid="uid://bhwywsg8px0ak" path="res://addons/sprouty_dialogs/editor/theme/panel_style.tres" id="2_00af5"]

[sub_resource type="DPITexture" id="DPITexture_5rvxf"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#ff5d5d\" d=\"M2 1v8.586l1.293-1.293a1 1 0 0 1 1.414 0L7 10.587l2.293-2.293a1 1 0 0 1 1.414 0L13 10.586l1-1V6H9V1H2zm8 0v4h4zm-6 9.414-2 2V15h12v-2.586l-.293.293a1 1 0 0 1-1.414 0L10 10.414l-2.293 2.293a1 1 0 0 1-1.414 0L4 10.414z\"/></svg>
"

[node name="LocalesSelector" type="VBoxContainer" unique_id=434589287]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ic1ok")

[node name="TopBar" type="HBoxContainer" parent="." unique_id=610596981]
layout_mode = 2

[node name="Label" type="Label" parent="TopBar" unique_id=1891187166]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Set the locales into which the dialogs will be translated."
mouse_filter = 1
theme_type_variation = &"HeaderSmall"
text = "Locales"

[node name="AddButton" type="Button" parent="TopBar" unique_id=795010145]
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Add a new locale."
text = "New +"

[node name="Panel" type="Panel" parent="." unique_id=1051783689]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_00af5")

[node name="Container" type="VBoxContainer" parent="Panel" unique_id=1075098251]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="HBoxContainer" parent="Panel/Container" unique_id=1613828856]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Panel/Container/Header" unique_id=1544284730]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Code"
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="Panel/Container/Header" unique_id=261732410]
layout_mode = 2

[node name="TypeLabel" type="Label" parent="Panel/Container/Header" unique_id=322295332]
layout_mode = 2
size_flags_horizontal = 3
text = "Language"
horizontal_alignment = 1

[node name="VSeparator2" type="VSeparator" parent="Panel/Container/Header" unique_id=1690212476]
layout_mode = 2

[node name="ValueLabel" type="Label" parent="Panel/Container/Header" unique_id=2116801536]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Country"
horizontal_alignment = 1

[node name="Label" type="Label" parent="Panel/Container/Header" unique_id=362830731]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/Container" unique_id=1283120828]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/Container" unique_id=110397979]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="LocalesContainer" type="VBoxContainer" parent="Panel/Container/ScrollContainer" unique_id=667898080]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/Container/ScrollContainer/LocalesContainer" unique_id=1717901812]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Add some locales!"
horizontal_alignment = 1

[node name="SaveButton" type="Button" parent="." unique_id=391609932]
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Save the current locales."
text = "Save Locales"
icon = SubResource("DPITexture_5rvxf")
alignment = 2

[node name="ConfirmSaveLocales" type="AcceptDialog" parent="." unique_id=2106673818]
auto_translate_mode = 1
title = "Please Confirm..."
initial_position = 4
size = Vector2i(600, 184)
dialog_text = "Some locales have been removed, so their respective texts in the CSV translation files will be removed when saving the dialog files.

Do you want to save the changes anyway?"
dialog_autowrap = true

[connection signal="pressed" from="TopBar/AddButton" to="." method="_on_add_locale_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_save_locales_pressed"]
[connection signal="canceled" from="ConfirmSaveLocales" to="." method="_on_confirm_save_canceled"]
[connection signal="custom_action" from="ConfirmSaveLocales" to="." method="_on_confirm_save_action"]
